apps/sample/deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: sample

spec:
  replicas: 2

  selector:
    matchLabels:
      app: sample

  template:

    metadata:
      labels:
        app: sample

    spec:
      imagePullSecrets:

      - name: ghcr-secret
      containers:

      - name: sample

        image:
          ghcr.io/ramchandk/sample:latest

        ports:
        - containerPort: 5000
