apps/sample/route.yaml
apiVersion: route.openshift.io/v1
kind: Route

metadata:
  name: sample

spec:
  to:
    kind: Service
    name: sample
